k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-02-k8s-app
spec: {}
status: {}
