k8s/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry
  name: registry
  namespace: project-02-k8s-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: registry
  strategy: {}
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
        - name: logs
          emptyDir: {}
      containers:
      - image: fasilcv/devapp:v1.0.0
        name: devapp
        volumeMounts:
          - name: logs
            mountPath: /var/log/nginx
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 100
        readinessProbe:
          exec:
            command:
            - sh 
            - -c
            - nc -z db-registry-0.mysql-service 3306
          initialDelaySeconds: 2
          periodSeconds: 2
      - name: reglog-access
        image: alpine:latest
        command: ['sh', '-c', 'tail -F /mnt/logs/access.log']
        volumeMounts:
          - name: logs
            mountPath: /mnt/logs
      - name: reglog-error
        image: alpine:latest
        command: ['sh', '-c', 'tail -F /mnt/logs/error.log']
        volumeMounts:
          - name: logs
            mountPath: /mnt/logs
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
  name: registry-svc
  namespace: project-02-k8s-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: registry
status:
  loadBalancer: {}
