k8s/deploy-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry
    role: database
    tier: backend
  name: mysql-service
  namespace: project-02-k8s-app
spec:
  clusterIP: None
  ports:
  - port: 3306
  selector:
    app: registry
    role: database
    tier: backend
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: registry
    role: database
    tier: backend
  name: db-registry
  namespace: project-02-k8s-app
spec:
  serviceName: "mysql-service"
  replicas: 2
  selector:
    matchLabels:
      app: registry
      role: database
      tier: backend
  template:
    metadata:
      labels:
        app: registry
        role: database
        tier: backend
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
        securityContext:
          runAsUser: 999
        resources: {}
        volumeMounts:
        - name: mysql-db-data
          mountPath: /var/lib/mysql
        - name: init-script-volume
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-script-volume
          configMap:
            name: db-init-script
  volumeClaimTemplates:
  - metadata:
      name: mysql-db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: nfs-share
      resources:
        requests:
          storage: 10Mi
status: {}
