k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ing
  namespace: project-02-k8s-app
spec:
  ingressClassName: nginx
  rules:
  - host: registry.fcvlab.com
    http:
      paths:
      - backend:
          service:
            name: registry-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - registry.fcvlab.com
    secretName: start-fcvlab-com
status:
  loadBalancer: {}
